# portfolio

./: .gitignore  README.md
ai-tagger/: main.py  pyproject.toml
ai-tagger/app/: __init__.py  config.py  main.py  schemas.py
ai-tagger/app/services/: gemini_service.py
backend/: Gemfile
backend/config/: credentials.yml.enc  master.key
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: generate-public-media-manifest.mjs
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AllVisualMediaArchive.tsx  CurtainIntroSection.tsx  CustomCursor.tsx  FeaturedHero.tsx  FeaturedMedia.tsx  FeaturedWorkHeader.tsx  FoldersSection.tsx  HeroAmbientMusic.tsx  HorizontalGallery.tsx  ScrollBackground.tsx  StaggeredGallery.tsx
frontend/src/data/: genres.ts  mockPhotos.ts  publicMediaManifest.ts
